array.island.Island.scala.error
Erreur de compilation :
Island:10: error: not found: value x
  for (k <- 1 to (x-1)){
                  ^Island:11: error: not found: value i
    if (num(i)>actuel){
            ^Island:12: error: not found: value i
      actuel=num(i)
                 ^